--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <div class="row__posters">
             <!-- Movie posters here -->
             <img class="row__poster row__posterLarge"
-                src="./american psycho.jpg" alt="movie">
+                src="american psycho.jpg" alt="movie">
             <img class="row__poster row__posterLarge"
-                src="./shutter island.bmp" alt="movie">
+                src="shutter island.bmp" alt="movie">
             <!-- Add more movie posters as needed -->
         </div>
     </section>
