--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <section class="banner">
         <div class="banner__contents">
-            <h1 class="banner__title">Stranger Things</h1>
+            <h1 class="banner__title">berserk</h1>
             <div class="banner__buttons">
                 <button class="banner__button">Play</button>
             
